compiler/testData/cli/jvm/kt19628_13.out
warning: language version 1.5 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/cli/jvm/kt19628_13.kt:5:29: error: unresolved reference: CollapsedStringAdapter
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:5:29: error: an annotation argument must be a compile-time constant
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:8:29: error: unresolved reference: CollapsedStringAdapter
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:8:29: error: an annotation argument must be a compile-time constant
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
